Fixed menu and z-index for photo in features section.

--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ p {
 /* Header
    ========================================================================== */
 .sec--head {
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     left: 0;
@@ -163,9 +163,44 @@ p {
 /* header box */
 
 .sec__box {
-    margin-top: 45px;
     margin-left: 50px;
     margin-right: 70px;
+    z-index: 100;
+}
+.sec__box-sticky {
+    margin-top: 45px;
+    z-index: 100;
+}
+.sticky {
+    position: fixed;
+    left: 0;
+    top: 0;
+    margin-top: 0;
+    padding-bottom: 10px;
+    width: 100%;
+    background: #000;
+    z-index: 100;
+}
+.sticky img {
+    width: 70%;
+    height: 70%;
+    padding-top: 14px;
+}
+.sticky .link-default--alt {
+    width: 100px;
+    padding: 12px;
+    font-size: 14px;
+}
+
+.sticky input[type=search] {
+    width: 180px;
+    padding: 12px 35px;
+}
+.sticky .search-btn {
+    top: 8px;
+}
+.sticky .nav {
+    padding-top: 8px;
 }
 .sec__box--main {
     float: left;
@@ -224,7 +259,6 @@ input[type=search]:focus {
 .buy .nav {
     display: inline;
 }
-
 /* Main
    ========================================================================== */
 
@@ -330,6 +364,7 @@ input[type=search]:focus {
 /* section features */
 
 .sec--features {
+    position: relative;
     z-index: 1;
     background: #f4f8fb;
 }
@@ -399,8 +434,8 @@ input[type=search]:focus {
 }
 .service-list-item {
     float: left;
-    width: calc((100% - 60px)/4);
-    margin-right: 20px;
+    width: calc((100% - 90px)/4);
+    margin-right: 30px;
     box-sizing: border-box;
 }
 .service-list-item:last-child {
